# package-helper-3

./: .buildinfo  .gitignore  .pre-commit-config.yaml  AUTHORS.md  AUTHORS.rst  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  HISTORY.md  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  authors.html  contributing.html  cookiecutter.json  creation.html  creation.ipynb  faq.html  faq.ipynb  filters.py  genindex.html  guide.html  history.html  index.html  installation.html  maintain.html  maintain.ipynb  objects.inv  preparation.html  preparation.ipynb  presentation.html  pyproject.toml  readme.html  recap.html  search.html  searchindex.js  tox.ini  (+2 more)
.doctrees/: authors.doctree  contributing.doctree  creation.doctree  environment.pickle  faq.doctree  guide.doctree  history.doctree  index.doctree  installation.doctree  maintain.doctree  preparation.doctree  presentation.doctree  readme.doctree  recap.doctree  tutorial.doctree  usage.doctree
.doctrees/nbsphinx/: creation.ipynb  faq.ipynb  recap.ipynb
.doctrees/reference/: index.doctree  my_class_1.doctree  my_class_2.doctree  my_class_3.doctree
.github/workflows/: docs.yml  main.yml  on-release-main.yml  test.yml  validate-codecov-config.yml
.run/: All tests.run.xml  Generate docs.run.xml
_sources/: creation.ipynb.txt  creation.md.txt  faq.ipynb.txt  faq.md.txt  guide.md.txt  history.md.txt  index.rst.txt  installation.rst.txt  maintain.ipynb.txt  maintain.md.txt  preparation.ipynb.txt  preparation.md.txt  tutorial.md.txt  tutorial.rst.txt
_sources/reference/: my_class_1.rst.txt  my_class_2.rst.txt  my_class_3.rst.txt
docs/: conf.py  creation.ipynb  creation.md  creation.old  faq.ipynb  faq.md  guide.md  index.md  index.rst  installation.md  installation.rst  llm-assistance.md  maintain.ipynb  maintain.md  preparation.ipynb  preparation.md  preparation.old  recap.ipynb  tutorial.md  tutorial.rst
hooks/: post_gen_project.py  pre_gen_project.py
package_helper_3/: __init__.py  cli.py  foo.py
reference/: index.html  my_class_1.html  my_class_2.html  my_class_3.html
tests/: test_foo.py
{{cookiecutter.project_name}}/.github/workflows/: docs.yml  on-release-main.yml
{{cookiecutter.project_name}}/.run/: Generate docs.run.xml
{{cookiecutter.project_slug}}/: CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  HISTORY.md  HISTORY.rst  README.md  README.rst  citation.cff  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: build.yml  docs.yml  publish_on_pypi.yml  release.yml
{{cookiecutter.project_slug}}/.run/: All tests.run.xml  Generate docs.run.xml
{{cookiecutter.project_slug}}/docs/: conf.py  index.md  index.rst  installation.rst
{{cookiecutter.project_slug}}/docs/presentation/: history.md  index.md  installation.md
{{cookiecutter.project_slug}}/docs/reference/: index.md  my_class_1.md  my_class_1.rst  my_class_2.md  my_class_2.rst  my_class_3.md  my_class_3.rst
{{cookiecutter.project_slug}}/docs/tutorials/: answer.ipynb  index.md  index.rst  tutorial.ipynb
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py  cli.py  {{cookiecutter.package_name}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/sub_package_1/: my_class_1.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/sub_package_2/: my_class_2.py  my_class_3.py
