[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
 '{{cookiecutter.project_slug}}/**/*',
  'cookiecutter.json',
  'hooks/*'
]

[project]
name = "package-helper-3"
version = "0.4.1"
description = "Package Helper 3 helps to create, develop, and maintain a Python package with UV."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Fabien Mathieu", email = "fabien.mathieu@normalesup.org"}
]
maintainers = [
    {name = "Fabien Mathieu", email = "fabien.mathieu@normalesup.org"}
]
license = "MIT"
dependencies = ["cookiecutter", "click"]

[project.urls]
repository = "https://github.com/balouf/package-helper-3"
documentation = "https://balouf.github.io/package-helper-3/"

[dependency-groups]
dev = [
    "ipython>=8.35.0",
    "myst-parser[linkify]>=4.0.1",
    "pydata-sphinx-theme>=0.16.1",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.8",
    "sphinx-copybutton>=0.5.2",
]

[project.scripts]
ph3 = 'package_helper_3.cli:main'

[tool.setuptools]
packages = ["package_helper_3"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["package_helper_3"]

[tool.coverage.html]
directory = "cov"

[tool.pytest.ini_options]
norecursedirs = "{{cookiecutter.project_slug}} hooks"
addopts = "--doctest-modules --cov --cov-config=pyproject.toml --cov-report xml --cov-report html --showlocals --capture=no --exitfirst --failed-first"
